[package]
name = "iot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
askama = "0.10.5"
serde = "1.0.130"
thiserror = "1.0.29"

[[bin]]
name = "iot"
path = "src/bin/main.rs"

[lib]
name = "iot"
path = "src/lib.rs"
